--- a/gamestoreAPI/gamestoreAPI/Web.config
+++ b/gamestoreAPI/gamestoreAPI/Web.config
@@ -13,10 +13,10 @@
 
 	<!--******************************************Kết nối csdl********************************************************-->
 	<connectionStrings>
-		<add name="dataGameStore" connectionString="Data Source=thuctapserver.database.windows.net;Initial Catalog=GameStore;Integrated Security=False;User Id=thuctap;Password=0919520863Cc;Encrypt=True;TrustServerCertificate=False;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+		<add name="dataGameStore" connectionString="Server=DESKTOP-4TL1J16;Database=GameStore;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	
-	
+  <!-- Source=thuctapserver.database.windows.net;Initial Catalog=GameStore;Integrated Security=False;User Id=thuctap;Password=0919520863Cc;Encrypt=True;TrustServerCertificate=False;MultipleActiveResultSets=True-->
+
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
